#77 Check if all used identifiers are declared (either by val or in EvalContext)